[gd_scene load_steps=4 format=2]

[ext_resource path="res://games/Ooks3/districts/district.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 20 )

[node name="n_district" type="Node2D"]
position = Vector2( 45, 130 )
script = ExtResource( 1 )

[node name="timerBox" type="Node2D" parent="."]
position = Vector2( 0, 17 )

[node name="ColorRect" type="ColorRect" parent="timerBox"]
margin_left = -19.0
margin_top = -20.0
margin_right = 21.0
margin_bottom = 20.0

[node name="ColorRect2" type="ColorRect" parent="timerBox"]
margin_left = -18.0
margin_top = -19.0
margin_right = 20.0
margin_bottom = 19.0
color = Color( 0.0901961, 0.0666667, 0.101961, 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -37.0
margin_top = -17.0
margin_right = 37.0
margin_bottom = 17.0

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 23.0
margin_top = 17.0
margin_right = 37.0
margin_bottom = 57.0

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = -37.0
margin_top = 17.0
margin_right = -23.0
margin_bottom = 57.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 30, 37 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -30, 37 )
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
